--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,9 @@ services:
     volumes:
       - ${DIR}:/tmp/project:ro
       - ${DIR}/bin:/tmp/project/bin
+      - /tmp/.X11-unix:/tmp/.X11-unix:rw
     environment:
-      - "DISPLAY=host.docker.internal:0.0"
+      - "DISPLAY"
   win:
     image: "philippvk/docker-freertos-sdl2:14.04"
     command: /bin/bash -c "rm -rf /tmp/build && mkdir /tmp/build && cd /tmp/build && cmake -DHOST_OS=win /tmp/project && tail -f /dev/null"
