--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ services:
   - docker
 
 before_install:
-  - docker build -t docker-freertos-sdl2:14.04 .
-  - docker run docker-freertos-sdl2:14.04 /bin/sh -c "echo 123"
+  - docker build -t philippvk/docker-freertos-sdl2:14.04 .
+  - docker run philippvk/docker-freertos-sdl2:14.04 /bin/sh -c "echo 123"
 
 script:
   - date
