--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
   - git clone https://github.com/PhilippvK/FreeRTOS-Emulator.git
   - cd FreeRTOS-Emulator
   - git checkout emulator
+  - git submodule update --init --recursive
   - cd docker
   - make start
 
